non-gitops/dev/traefik/dashboard/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external-dev
    tailscale.com/expose: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.dev.timmybtech.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
