non-gitops/dev/traefik/dashboard/ingressRoute_metrics.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-metrics.local.timmybtech.com`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
  tls:
    secretName: local-timmybtech-com-tls
